--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html> 
 </html>
     <head>
-        <title>My first page!</title>
+        <title>Mila's Ux Web Design Website</title>
+        <link rel="stylesheet" href="style.css">
+        <text-align><CENTER></text-align>
     </head>
 
     <body>
         
-        <p>This is my first paragraph</p>
-        <p>This is my second paragraph</p>
-        <h1>Heading One</h1>
-        <h2>Heading Two</h2>
-        <h3>Heading Three</h3>
-        <h4>Heading Four</h4>
-        <h5>Heading Five</h5>
-        <h6>Heading Six</h6>
-        <p><b>UX Website Design Class1b</b></p>
-        <h4>You can <a href="mailto:mperez157@fordham.edu"></a> anytime</h4>
+        <background-color>black</background-color>
+        <h1>Welcome to my website!</h1>
+        <h2>My name is Mila Pérez</h2>
+
+        <p>I am a 3rd year at Fordham University</p>
+        <p>I want to pursue a career in UX Design</p>
+
+        <img src="images/nyc2.jpg" height="200px">
+        <img src="images/nyc1.jpg" height="200px">
+
+        <h3>Here are some facts about me</h3>
+        <ul>
+            <li>I am Puerto Rican</li>
+            <li>I am almost 21 years old</li>
+            <li>I was born in Nashville, Tennessee</li>
+        </ul>
+        text-align
+
+        <h4>You can email me here <a href="mailto:mperez157@fordham.edu"></a> anytime</h4>
 
         <hr>
 <!--This a note to self only 
@@ -23,17 +34,7 @@
     - ul is for bullet points
     - ol is for ordered lists
     - a is for a link  -->
-        <ul>
-            <li>Apples</li>
-            <li>Grapes</li>
-            <li>Bananas</li>
-        </ul>
-
-        <ol>
-            <li>Brocoli</li>
-            <li>Carrots</li>
-            <li>Cauliflower</li>
-        </ol>
+       
     </body>
 
 
