--- a/index.html
+++ b/index.html
@@ -8,27 +8,17 @@
 
     <body>
         
-        <background-color>black</background-color>
         <h1>Welcome to my website!</h1>
         <h2>My name is Mila Pérez</h2>
 
         <p>I am a 3rd year at Fordham University</p>
         <p>I want to pursue a career in UX Design</p>
 
-        <img src="images/nyc2.jpg" height="200px">
-        <img src="images/nyc1.jpg" height="200px">
-
         <h3>Here are some facts about me</h3>
-        <ul>
-            <li>I am Puerto Rican</li>
-            <li>I am almost 21 years old</li>
-            <li>I was born in Nashville, Tennessee</li>
-        </ul>
-        text-align
 
-        <h4>You can email me here <a href="mailto:mperez157@fordham.edu"></a> anytime</h4>
-
+        <h4><a href="mailto:mperez157@fordham.edu">You can email me here </a></h4>
         <hr>
+
 <!--This a note to self only 
     - hr is for horizontal rule
     - ul is for bullet points
