--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -1,9 +1,19 @@
-<div id="paper">
-    <div id="pattern">
-      <div id="content">
-        Dear Diary
-        <br/><br/>Here are some of the sweetest memories I made during the last summer trip to Canada. What's even more beautiful about it was that it was the first time the entire family got together to spend quality time with each other. The part I enjoyed the most was the road trips with my cousins whom I met after years. Hugo and Julia made the best cupcakes I've ever had. Didn't know that they would grow up so fast. Being with them is fun. I wish to spend more such time with them in future too.
-        </br></br>The sight of Niagara Falls was quite tantalizing. We also got a chance to see a rainbow there which looked soo arresting. We captured the most beautiful views there walking down the Clifton Hill. 
-      </div>
-    </div>
-  </div>
+<head>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+
+<body>
+    <h1 align="center">Mila's Web Design Journal</h1>
+</body>
+
+<IMG SRC="6vlk.gif">
+
+<div class="card">
+    <header>
+     <span class="card-title">
+      A Handmade Web
+     </span>
+    </header>
+    <p class="card-text">I believe that everything happens for a reason. People change so that you can learn to let go, things go wrong so that you appreciate them when they're right, you believe lies so you eventually learn to trust no one but yourself, and sometimes good things fall apart so better things can fall together.</p>
+   </div>
+   
