--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -2,11 +2,11 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
+
 <body>
     <h1 align="center">Mila's Web Design Journal</h1>
 </body>
 
-<IMG SRC="6vlk.gif">
 
 <div class="card">
     <header>
@@ -14,6 +14,29 @@
       A Handmade Web
      </span>
     </header>
-    <p class="card-text">I believe that everything happens for a reason. People change so that you can learn to let go, things go wrong so that you appreciate them when they're right, you believe lies so you eventually learn to trust no one but yourself, and sometimes good things fall apart so better things can fall together.</p>
+    <p class="card-text">Carpenter shows online existence to readers to reconsider the artfully created and deeply human web through personal stories and poetic prose. I find website design to be the most creative thing that I have done and to learn how to code in this class is a new artform I am learning.</p>
    </div>
    
+   <div class="card2">
+    <header>
+     <span class="card-title">
+      My Website is a Shifting House
+     </span>
+    </header>
+    <p class="card-text">A website is what you make it as long as it appeals to the user as well, your website is your artwork. Schwulst emphasizes that the web progresses with us as time goes. You can have anxiety about what you are creating but in the end it will grow as you grow, as society grows. Everything is constantly changing.</p>
+   </div>
+
+   <div class="card3">
+    <header>
+     <span class="card-title">
+     A Rant on Technology
+     </span>
+    </header>
+    <p class="card-text">Technology is much more than most people think. For me, when I hear the word technology in today's age I of course, like most others, think of computers. However, Le Guin has reminded me that technology is every material thing that we interact with. How fascinating? Now everything seems like art to me.</p>
+   </div>
+
+   <div class="gifs">
+    <h1>These gifs describe how it feels to make websites/code.</h1>
+
+
+   </div>
