--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -2,13 +2,24 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
+<style>
+div.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 5px;
+    background-color: #0c1747;
+    border: 3px solid #070e2f;
+  }
+</style>
+
 
 <body>
-    <h1 align="center">Mila's Web Design Journal</h1>
+    <div class="sticky">Mila's Web Design Journal</div>
+    
 </body>
 
-
-<div class="card">
+<div class="card first">
     <header>
      <span class="card-title">
       A Handmade Web
@@ -16,7 +27,8 @@
     </header>
     <p class="card-text">Carpenter shows online existence to readers to reconsider the artfully created and deeply human web through personal stories and poetic prose. I find website design to be the most creative thing that I have done and to learn how to code in this class is a new artform I am learning.</p>
    </div>
-   
+
+   <div class="cards-container">
    <div class="card2">
     <header>
      <span class="card-title">
@@ -34,9 +46,22 @@
     </header>
     <p class="card-text">Technology is much more than most people think. For me, when I hear the word technology in today's age I of course, like most others, think of computers. However, Le Guin has reminded me that technology is every material thing that we interact with. How fascinating? Now everything seems like art to me.</p>
    </div>
+   </div>
 
    <div class="gifs">
-    <h1>These gifs describe how it feels to make websites/code.</h1>
+    <h2 align="center">These gifs describe how it feels to make websites/code.</h2>
+    <img src="6bye.gif" alt="happy"
+    width="400px"
+    height="400px"
+    >
 
+    <img src="EHil.gif" alt="crazycode"
+    width="400px"
+    height="400px"
+    >
 
+    <img src="fyrT.gif" alt="theend"
+    width="400px"
+    height="400px"
+    >
    </div>
