--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -49,19 +49,45 @@ div.sticky {
    </div>
 
    <div class="gifs">
-    <h2 align="center">These gifs describe how it feels to make websites/code.</h2>
-    <img src="6bye.gif" alt="happy"
-    width="400px"
-    height="400px"
-    >
+    <h1 align="center">These gifs describe how it feels to make websites/code.</h1>
 
-    <img src="EHil.gif" alt="crazycode"
-    width="400px"
-    height="400px"
-    >
+    <img src="5yGR.gif" alt="theend" class="center"
+    width="300px"
+    height="300px">
+    
+    <img src="EHil.gif" alt="crazycode" class="center"
+    width="300px"
+    height="300px">
 
-    <img src="fyrT.gif" alt="theend"
-    width="400px"
-    height="400px"
-    >
+    <img src="6bye.gif" alt="happy" class="center"
+    width="300px"
+    height="300px">
+
+    <img src="fyrT.gif" alt="theend" class="center"
+    width="300px"
+    height="300px">
+
    </div>
+
+   <div class="reflection">
+   
+    <h1>
+        My Reflection
+    </h1>
+
+    <h2>What is a website anyway? </h2>
+    <h3>A website is a place where people can express who they are as a person, as a company, as an artist, and the list goes on. A website obviously has its technical terms but to me in this sense it is just like a physical canvas. From our readings I have found to be less stressed out about the way that my work looks because it will progress as my knowledge progresses. It is my work and my art that I am creating.</h3>
+
+
+    <h2>Why put things on the internet?</h2>
+    <h3>Just like Carpenter mentioned, putting things out on the internet lets us connect with much more people in a different and more personal way. By creating a handmade website you are putting out something that is personal to you. I think it is important to put out artwork everywhere. Even if you are a physical artist, the internet is a great way to show more and more people your take on website design as well as your physical art portrayed online.</h3>
+
+
+    <h2>Will websites someday become obsolete?</h2>
+    <h3>I think at a certain time everything can become obsolete but be revamped. Sometimes being out of date is in style. Even if websites do become obsolete in a sense, they will always come back. </h3>
+
+
+    <h2>What is your relationship with technology? </h2>
+    <h3>My relationship with technology is interesting. I love to design. Using Figma is one of the most fun yet challenging things I can do. I learn a lot but can understand the material. Coming into this class and my other creative coding class, I have had a different relationship. I realized how much harder this is to create a handmade website. However, this difficult challenge is allowing me to grow as a person and to grow my knowledge. </h3>
+
+    </div> 
