--- a/project1/index.html
+++ b/project1/index.html
@@ -14,53 +14,40 @@
         <section id="opener">
             <div class="quote">
                 <h2>“According to the Yankees owning one person makes you a scoundrel, but owning a nation makes you a colonial benefactor.”</h2>
-                <h3> ― Nelson Denis</h3>
-            </div>
-            <div class="ponce"></div>
-            <div class="bluemoon"></div>
-            <div class="graymoon"></div>
-        </section>
-       
-        <section class="flex-area">
-            <div class="column">
-                <h4>Moons in Books</h4>
-                <ul>
-                    <li>Killers of the Flower Moon <span>by David Grann</span></li>
-                    <li>Goodnight Moon <span>by Margaret Wise Brown</span></li>
-                    <li>The First Men in the Moon <span>by HG Wells</span></li>
-                    <li>The Moon Is a Harsh Mistress <span>by Robert A. Heinlein</span></li>
-                    <li>Owl Moon <span>by Jane Yolen</span></li>
-                    <li>By the Light of the Moon <span>by Dean Koontz</span></li>
-                    <li>Moon Called <span>by Patricia Briggs</span></li>
-                    <li>The Moon Is Down <span>by John Steinbeck</span></li>
-                    </ul>
+                <h4> ― Nelson Denis</h4>
             </div>
 
+        </section>
+       
+
+        <section class="middle">
+            <div class="author">
+                <h3>Nelson Antonio Denis is an American attorney, author, film director, and former representative to the New York State Assembly. From 1997 through 2000, Denis represented New York's 68th Assembly district, which includes the East Harlem and Spanish Harlem neighborhoods, both highly populated by Latinos.</h3>  
+            </div>
+
+
+
+        </section>
+
+        <section class="flex-area">
             <div class="column">
-                <h4>Moons in Films</h4>
+                <h4>Colonialism and Imperialism:</h4>
                 <ul>
-                    <li>Man on the Moon <span>1999</span></li>
-                    <li>A Trip to the Moon <span>1902</span></li>
-                    <li>A Walk on the Moon <span>1999</span></li>
-                    <li>Paper Moon <span>1973</span></li>
-                    <li>Cat-Women of the Moon <span>1953</span></li>
-                    <li>First Man <span>2018</span></li>
-                    <li>Ad Astra <span>2019</span></li>
-                    <li>Men in Black 3 <span>2012</span></li>
+                    <li>One of the central themes of the book is the examination of Puerto Rico's status as a colony of the United States. Denis delves into the historical context of Puerto Rico's colonization, including the Spanish-American War and the subsequent transfer of Puerto Rico to U.S. control. The book highlights how Puerto Rico has been treated as a possession rather than a fully autonomous nation, subject to exploitation and domination by external powers.</li>
                 </ul>
             </div>
 
             <div class="column">
-                <h4>Moons Walkers</h4>
+                <h4>Resistance and Revolution:</h4>
                 <ul>
-                    <li>Buzz Aldrin <span>Apollo 11</span></li>
-                    <li>Neil Armstrong <span>Apollo 11</span></li>
-                    <li>Charles "Pete" Conrad <span>Apollo 12</span></li>
-                    <li>Alan Bean <span>Apollo 12</span></li>
-                    <li>Alan B. Shepard Jr. <span>Apollo 14</span></li>
-                    <li>David R. Scott <span>Apollo 15</span></li>
-                    <li>Charles M. Duke <span>Apollo 16</span></li>
-                    <li>Harrison H. Schmitt <span>Apollo 17</span></li>
+                    <li>Another key theme of the book is the resistance of the Puerto Rican people against colonial rule. Denis documents various episodes of resistance throughout Puerto Rico's history, including nationalist uprisings, labor strikes, and political activism. The book underscores the resilience and determination of Puerto Ricans in their struggle for self-determination and social justice, despite facing repression and violence from colonial authorities.</li>
+                </ul>
+            </div>
+
+            <div class="column">
+                <h4>State Violence and Repression: </h4>
+                <ul>
+                    <li>Tactics of state violence and repression used by U.S. authorities to maintain control over Puerto Rico. Denis exposes the brutality of law enforcement agencies, such as the infamous police chief Winship, who employed repressive measures to crush dissent and maintain order on the island. The book documents political persecution, censorship, and extrajudicial killings aimed at suppressing Puerto Rican nationalism and dissent.</li>
                 </ul>
             </div>
 
