--- a/project/index.html
+++ b/project/index.html
@@ -22,12 +22,20 @@
 </nav>
 
 <div id="section1">
-    <h1>This is home</h1>
+    <h1>War On All Puerto Ricans</h1>
+    <h3>“According to the Yankees owning one person makes you a scoundrel, but owning a nation makes you a colonial benefactor.”</h3>
+    <h4>- Nelson Denis</h4>
 </div>
 
+<section class="bookflex">
 <div id="section2">
     <h1>This is Book</h1>
+    <div class="book">
+    <img src="book.jpg" alt="book">
+
 </div> 
+
+</section>
 
 <div id="section3">
     <h1>This is Themes</h1>
