--- a/project/index.html
+++ b/project/index.html
@@ -27,26 +27,62 @@
     <h4>- Nelson Denis</h4>
 </div>
 
-<section class="bookflex">
+
 <div id="section2">
-    <h1>This is Book</h1>
-    <div class="book">
-    <img src="book.jpg" alt="book">
+    <div class="book-parent">
+        <div class="book">
+        <img src="images/book.jpg" alt="book">
+        </div>
+        <div class="booktext1">
+            <p>In 1950, Puerto Rico's Nationalist Party, led by Pedro Albizu Campos, launched a failed armed revolt against US colonial rule. The uprising resulted in widespread violence, including assassination attempts on President Harry Truman and US Army bombings of two towns. Nelson A. Denis's "War Against All Puerto Ricans" meticulously details these events, intertwining Albizu Campos's story with Puerto Rico's broader struggle for self-determination from 1898 to the present day.</p>
+        </div>
+    </div>
 
 </div> 
 
-</section>
 
 <div id="section3">
-    <h1>This is Themes</h1>
+    <div class="themes">
+        <div class="column">
+        <h4>Colonialism</h4>
+        <p>The book examines Puerto Rico's status as a colony of the United States. Denis delves into the historical context of Puerto Rico's colonization, including the Spanish-American War and the subsequent transfer of Puerto Rico to U.S. control. The book highlights how Puerto Rico has been treated as a possession rather than a fully autonomous nation, subject to exploitation and domination by external powers.</p>
+        </div>
+
+        <div class="column">
+        <h4>Resistance</h4>
+        <p>Resistance of the Puerto Rican people against colonial rule is documemted through various episodes of resistance throughout Puerto Rico's history, including nationalist uprisings, labor strikes, and political activism. The book underscores the resilience and determination of Puerto Ricans in their struggle for self-determination and social justice, despite facing repression and violence from colonial authorities.</p>
+        </div>
+
+        <div class="column">
+            <h4>Violence and Repression</h4>
+            <p>Tactics of state violence and repression used by U.S. authorities to maintain control over Puerto Rico is exposed by the brutality of law enforcement agencies, such as the infamous police chief Winship, who employed repressive measures to crush dissent and maintain order on the island. The book documents political persecution, censorship, and extrajudicial killings aimed at suppressing Puerto Rican nationalism and dissent.</p>
+            </div>
+
+    </div>
+
 </div>
 
 <div id="section4">
-    <h1>This is Photos</h1>
+    <div class="images">
+        <img src="images/horses.png" alt="horses">
+        <img src="images/sugar.png" alt="sugar">
+        <img src="images/tobacco.png" alt="tobacco">
+    </div>
 </div>
 
 <div id="section5">
-    <h1>This is Author</h1>
+    <h3>About the Author</h3>
+    <div class="author-parent">
+        <div class="author">
+        <img src="images/nelson.jpg" alt="nelson">
+        </div>
+        <div class="authortext1">
+            <p>
+                Nelson A. Denis is a former New York State Assemblyman, author, and advocate deeply committed to social justice and Puerto Rican heritage. His work reflects both his political experience and personal dedication to shedding light on Puerto Rico's history, challenging colonialism, and amplifying marginalized voices. Denis's integrity and empathy shine through his writing and activism, inspiring dialogue and understanding of Puerto Rico's struggles and resilience.</p>
+        </div>
+    </div>
+</div>
+
 </div>
 
 </body>
