--- a/project2/index.html
+++ b/project2/index.html
@@ -4,11 +4,147 @@
         <title>Amazon Critique</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kalnia&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
+    <style>
+        img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1000px;
+        max-height: 1000px;
+}
+
+    #section4 {
+            height: 700px;
+            background-color: #232F3E;
+            display: flex;
+            align-items: center;
+            width: 100%;
+        }
+
+        .content {
+            flex: 1; /* Take remaining space */
+            color: white;
+            padding: 20px;
+        }
+
+        .video {
+            flex: 1; /* Take remaining space */
+            display: flex;
+            justify-content: right
+            padding: 20px;
+            margin: 30px;
+        }
+
+    video {
+        max-width: 500px;
+        max-height: 1200px;
+    }
+
+
+    #section2 {
+        background-image: linear-gradient(to bottom right, #05A0D1, #66e4cd);
+    }
+
+    #section6 {
+        background-image: linear-gradient(to bottom right, #05A0D1, #66e4cd);
+    }
+
+    .flex-container {
+    display: flex;
+    }    
+
+    .flex-container > div {
+    background-color: #232F3E;
+    margin: 10px;
+    padding: 10px;
+    font-size: 30px;
+    color: white;
+    }
+
+    img2 {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 200px;
+        max-height: 200px;
+}
+
+    </style>
+
+    <body>
 
     <div id="section1">
-        <h1>Can you guess what terribly designed app I choose to critique?</h1>
+        <div class="header"></div>
+        <h1>Can you guess what terribly designed website/app I chose to critique?</h1>
     </div>
+
+    <div id="section2">
+        <div class="Amazon">
+        <img src="images/amazon.png" alt="logo">
+    </div>
+    </div>
+
+    <div id="section3">
+        <div class="opener">
+        <h1>What could be so bad?</h1> 
+        <h6>Well, everything.</h6>
+        </div>
+    </div>
+
+    <div id="section4">
+        <div class="text">
+        <h1>Initial Thoughts</h1>
+        <p>When users first open the Amazon app, they are cornered with an overwhelming interface. Right off the bat, the homepage is packed with an immense amount of vastly different products, promotions, and navigating elements allowing users to be confused where to start and finish. So many words, bright colors, and random product images that aren’t consistent all contribute to the challenge of focusing on the end goal for the user. The overload of content can lead to user confusion   and struggle, which would then stop the user from continuing on with the app or website. The initial experience is more than overwhelming. It lacks consistency, visual appeal, and contributes to user pain points.</p>
+        </div>
+        <div class="video">
+        <video width="640" height="360" controls>
+        <source src="videos/amazon.mp4" type="video/mp4"
+        </video>
+        </div>
+    </div>
+
+    <div id="sectionimg">
+        <div class="webimgs">
+            <img src="images/Screen Shot 2024-03-10 at 8.37.18 PM.png" alt="">
+            <img src="images/Screen Shot 2024-03-10 at 8.38.50 PM.png" alt="">
+        </div>
+    </div>
+
+    <div id="section5">
+        <div class="themes">
+            <h4>Content</h4>
+            <ul type="none">
+                <li>Amazon's UX/UI design often struggles with overwhelming amounts of content. With a vast array of products and services, the platform can sometimes inundate users with too much information, leading to decision fatigue and frustration. The lack of effective content organization and prioritization can make it challenging for users to find what they're looking for quickly and efficiently. This issue is particularly evident in product descriptions and reviews, where important details may be buried under excessive text, making it difficult for users to make informed purchasing decisions.</li>
+            </ul>
+            <h4>Design</h4>
+            <ul type="none">
+                <li>Amazon's design is often criticized for being outdated and cluttered. The user interface lacks visual hierarchy, consistency, and aesthetic appeal, making it challenging for users to navigate the site or app effectively. The use of small fonts, dense layouts, and crowded pages can result in a visually overwhelming experience that detracts from usability and overall satisfaction. Additionally, the absence of modern design principles, such as whitespace and minimalism, further contributes to a cluttered and confusing interface.</li>
+            </ul>
+            <h4>Homepage</h4>
+            <ul type="none">
+                <li>Amazon's home page suffers from a lack of personalization and customization, leading to a generic and impersonalized user experience. The cluttered layout and overwhelming amount of information can make it challenging for users to focus on relevant content or promotions. Additionally, the absence of clear calls-to-action and intuitive navigation elements can hinder users' ability to explore the site or discover new products easily. Overall, the home page fails to engage users effectively and lacks the dynamic and personalized features that are characteristic of successful e-commerce platforms.</li>
+            </ul>
+        </div>
+
+    <div id="section6">
+        <h3>Reviews</h3>
+        <div class="flex-container">
+            <div>Even more clutter in the bottom bar, makes me dislike using the app | Still doesn't have dark mode. | I'm clicking the wrong button all the time. Please fix it. | The new update ruins the experience by putting an Inspiration tab right where you would click to go to see your orders. I constantly click it by accident. | Previous version review for a long time: Great redesign, allows for multi tab browsing. And it doesn't freeze like the old version
+                <img src="images/one-stars-rating-with-transparent-background-free-png.png" alt="img2" class="img2" style="width: 100px; height: 100px">
+            </div>
+            <div>Continues to get worse & worse. App freezes & requires force close everytime I use it. I've cleaned cache and made sure app/battery settings were not causing it to misbehave.
+                <img src="images/one-stars-rating-with-transparent-background-free-png.png" alt="img2" class="img2" style="width: 100px; height: 100px">
+            </div>
+            <div>This is the SLOWEST app ive ever dealt with. It wasnt like that before but the past like year/ 2 years it takes so long just for things to load, & I have to click things multiple times. No other apps on my phone do this, only amazon shopping.
+                <img src="images/one-stars-rating-with-transparent-background-free-png.png" alt="img2" class="img2" style="width: 100px; height: 100px">
+            </div>
+        </div>
+    </div>
+
+
+    </body>
