--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -9,7 +9,56 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
-    <div id="section1">
-        <div class="header"></div>
-        <h1>Can you guess what terribly designed website/app I chose to critique?</h1>
-    </div>
+<style>
+    @media screen and (min-width: 600px) {
+  div.header {
+    font-size: 70px;
+  }
+}
+  @media screen and (max-width: 600px) {
+  div.header {
+    font-size: 50px;
+  }
+}
+</style>
+
+<body>
+  <div id="section1">
+    <div class="header"></div>
+    <h1>The Web's Grain</h1>
+</div>
+
+  <div id="img">
+    <img src="bear.png" alt="bearbicycle">
+  </div>
+
+  <div id="text">
+    <h2>Don't Judge a Bicycle by it's Bear</h2>
+    <p>Not everything is what it seems. <br> A website can be fancy and beautiful yet unrealistic and broken. <br> Never judge a bicycle by it's bear.</p>
+    <h4>"I believe every material has a grain, including the web. But this assumption flies in the face of our expectations for technology. Too often, the internet is cast as a wide-open, infinitely malleable material. We expect technology to help us overcome limitations, not produce more of them. In spite of those promises, we typically yield consistent design results."</h4>
+  </div>
+
+  <div id="idk">
+    <img src="pola.png" alt="pola">
+    <p>I love polaroids and anything film. I just wanted to add this in here. <br> I love the redundancy.</p>
+  </div>
+
+  <div id="next">
+    <img src="collage.png" alt="collage">
+    <p>So cool I want this printed in my room. At this point all I can focus on in this article is the media.</p>
+  </div>
+
+  <div id="next2">
+    <img src="nopola.png" alt="nopola">
+    <p>I love seeing how it went from polaroids to regular photos with overlaps. I really appreciate when websites don't use everything aligned a certain way and become creative with positioning.</p>
+  </div>
+
+  <div id="theend">
+    <img src="calm.png" alt="end">
+    <p>Here I am. At the end. Pretty confused. Obsessed with the media and the presentation. But, I don't feel like I learned much because I was too focused on trying to understand and not actually understanding. <br> That is okay. I enjoyed the reading!</p>
+  </div>
+
+  <div>
+    <h1>The End</h1>
+  </div>
+</body>
